--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express-handlebars": "^3.0.0",
     "mongoose": "^5.1.5",
     "path": "^0.12.7",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "route": "^0.2.5",
+    "routes": "^2.1.0"
   }
 }
